tests/grammar/valid/v7_type_definition.c
#include <stdint.h>
#include <stdio.h>


typedef int64_t money_t;
typedef int32_t age_t;
