tests/grammar/invalid/v4_missing_right_additiveOperator.c
#include <stdint.h>
#include <stdio.h>

a + ;
